--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=tasklinker
-spring.datasource.url=jdbc:postgresql://localhost:5432/tu_base_de_datos
-spring.datasource.username=tu_usuario
-spring.datasource.password=tu_contraseña
+spring.application.name=Web - Service - NotificationsBC
+spring.datasource.url=jdbc:postgresql://localhost:5432/notificationsbc
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=DEBUG
-
-
-
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
